--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewRecipeActivity"></activity>
+        <activity android:name=".ViewRecipeActivity"></activity>
+        <activity android:name=".NewRecipeActivity" />
         <activity android:name=".Home" />
         <activity android:name=".MainActivity">
             <intent-filter>
