--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     dataBinding {
         enabled true
     }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -60,6 +65,13 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0-beta05"
     implementation 'com.google.android.material:material:1.0.0'
+
+    //Image picker
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
+    implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 
 
 }
