--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.murdoch.ict376.whatsfordinner"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -71,6 +71,9 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //Material Calendar
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
 
 }
