--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:label="@string/title_activity_categories_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".NewRecipeActivity" />
+        <activity android:name=".Calendar" />
         <activity android:name=".Home" />
         <activity android:name=".MainActivity">
             <intent-filter>
