--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+
+
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -51,8 +53,8 @@ dependencies {
 
     //Define Room Database dependencies
 
-    def room_version = "2.2.0-rc01"
-    def lifecycle_version = "2.2.0-alpha03"
+    def room_version = "2.2.1"
+    def lifecycle_version = "2.2.0-beta01"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -63,7 +65,7 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    implementation "androidx.recyclerview:recyclerview:1.1.0-beta05"
+    implementation "androidx.recyclerview:recyclerview:1.1.0-rc01"
     implementation 'com.google.android.material:material:1.0.0'
 
     //Image picker
@@ -74,6 +76,10 @@ dependencies {
 
     //Material Calendar
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
+    //Multiselect Spinner
+    implementation 'com.github.Liocoder24x7:Advanced-Spinner:v1.0'
+
 
 
 }
